# movdata

./: README.md  pyproject.toml
data/: companyList.json
data/companyInfo/: companyInfo_3.json
data/movies/people/: peopleList.json
data/pars/: .part-00000-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet.crc  .part-00001-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet.crc  .part-00002-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet.crc  .part-00003-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet.crc  .part-00004-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet.crc  .part-00005-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet.crc  .part-00006-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet.crc  part-00000-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet  part-00001-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet  part-00002-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet  part-00003-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet  part-00004-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet  part-00005-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet  part-00006-08aad489-d424-4a2d-8527-651dd2ca596e-c000.snappy.parquet
data/sel/company/: .part-00000-2d6a22b1-67b7-46fa-8819-d7f1a05f9184-c000.snappy.parquet.crc  (+1 more)
src/movdata/: companyInfo.py  companyList.py  movieInfo.py  movieList.py  peopleInfo.py  peopleList.py
tests/: test_companyInfo.py  test_companyList.py  test_movieInfo.py  test_movieList.py  test_peopleInfo.py  test_peopleList.py
(+17 files in other folders)
