[project]
name = "movdata"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
]
dependencies = [
    "pytest>=8.3.2",
    "pyarrow>=17.0.0",
    "requests>=2.32.3",
    "tqdm>=4.66.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath="src"

[tool.pdm]
distribution = True 
